Finished visual update, and fixed caps shift bug

--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
-.app {
-    background-image: url('./image/icon.svg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    min-height: 100vh;
-    
-    @apply text-blue-200;
+* {
+    @apply bg-gray-900;
+}
+.app {    
+    @apply text-white bg-gray-900;
 }
 
 button {
-    @apply hover:bg-blue-200 hover:text-slate-500 rounded shadow shadow-slate-800;
+    @apply hover:bg-blue-200 hover:text-slate-800 rounded shadow shadow-slate-800;
 }
 
 .title {
